--- a/pages/non_fiction.html
+++ b/pages/non_fiction.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'/>
     <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel='stylesheet' href='style.css'/>
+    <link rel='stylesheet' href='/style.css'/>
     <title>Teigen's Book Reviews</title>
   </head>
   <body>
@@ -28,21 +28,17 @@
       </div>
     </nav>
   <div class="header">
-    <h1>Teigen's Book Reviews</h1>
+    <h1>Non-fiction</h1>
   </div>
   <div class="box">
     <div class="display_box">
-      <img src='LOTR.jpg'>
+      <img src='/habit.jpg'>
+      <p> Armadillos meaning "little armoured ones" in Spanish are New World placental mammals in the order Cingulata. The Chlamyphoridae and Dasypodidae are the only surviving families in the order, which is part of the superorder Xenarthra, along with the anteaters and sloths. Read full review...</p>
     </div>
     <div class="display_box">
-      <img src='Farseer.jpg'>
+      <img src='/grit.jpg'>
+        <p> Armadillos meaning "little armoured ones" in Spanish are New World placental mammals in the order Cingulata. The Chlamyphoridae and Dasypodidae are the only surviving families in the order, which is part of the superorder Xenarthra, along with the anteaters and sloths. Read full review...</p>
     </div>
-    <div class="display_box">
-      <img src='Mistborn.jpg'>
-    </div>
-  </div>
-  <div class="text">
-  <p> Armadillos meaning "little armoured ones" in Spanish are New World placental mammals in the order Cingulata. The Chlamyphoridae and Dasypodidae are the only surviving families in the order, which is part of the superorder Xenarthra, along with the anteaters and sloths. Nine extinct genera and 21 extant species of armadillo have been described, some of which are distinguished by the number of bands on their armour. All species are native to the Americas, where they inhabit a variety of different environments.</p>
   </div>
   <div class="footer">
     <p>Footer</p>
