--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <p> Armadillos meaning "little armoured ones" in Spanish are New World placental mammals in the order Cingulata. The Chlamyphoridae and Dasypodidae are the only surviving families in the order, which is part of the superorder Xenarthra, along with the anteaters and sloths. Nine extinct genera and 21 extant species of armadillo have been described, some of which are distinguished by the number of bands on their armour. All species are native to the Americas, where they inhabit a variety of different environments.</p>
   </div>
   <div class="footer">
-    <p>Footer</p>
+    <p><a href="https://github.com/Temmues/Creative_Project_1/"> Git </a></p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
