--- a/pages/non_fiction.html
+++ b/pages/non_fiction.html
@@ -41,7 +41,7 @@
     </div>
   </div>
   <div class="footer">
-    <p>Footer</p>
+    <p><a href="https://github.com/Temmues/Creative_Project_1/"> Git </a></p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
